orleans-transactional/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: benchmark-orleans-transactional
  labels:
    orleans/serviceId: benchmark-orleans-transactional
spec:
  selector:
    matchLabels:
      orleans/serviceId: benchmark-orleans-transactional
  replicas: 3
  template:
    metadata:
      labels:
        # This label is used to identify the service to Orleans
        orleans/serviceId: benchmark-orleans-transactional

        # This label is used to identify an instance of a cluster to Orleans.
        # Typically, this will be the same value as the previous label, or any 
        # fixed value.
        # In cases where you are not using rolling deployments (for example,
        # blue/green deployments),
        # this value can allow for distinct clusters which do not communicate
        # directly with each others,
        # but which still share the same storage and other resources.
        orleans/clusterId: benchmark-orleans-transactional
    spec:
      containers:
        - name: main
          image: eu.gcr.io/martijns/benchmark-orleans-transactional
          imagePullPolicy: Always
          ports:
            # Define the ports which Orleans uses
            - containerPort: 11111
            - containerPort: 30000
            - containerPort: 80
          resources:
            requests:
              cpu: 3.1
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 60
      terminationGracePeriodSeconds: 180
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
