orleans-transactional/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: benchmark-orleans-transactional-service
spec:
  selector:
    orleans/serviceId: benchmark-orleans-transactional
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 80
