orleans-transactional/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: benchmark-orleans-transactional-ingress
spec:
  defaultBackend:
    service:
      name: benchmark-orleans-transactional-service
      port:
        number: 80
